Fix word wrapping issue with checkbox label

--- a/src/leaguespot-components/components/inputs/switches/CheckBox.less
+++ b/src/leaguespot-components/components/inputs/switches/CheckBox.less
@@ -2,6 +2,7 @@
 
 .rc-CheckBox {
   display: inline-block;
+  white-space: nowrap;
 
   div > div > div {
     margin-right: 0.25em !important;
